--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/html5complete"]
+	path = bundle/html5complete
+	url = https://github.com/othree/html5.vim.git
+[submodule "bundle/phpqa"]
+	path = bundle/phpqa
+	url = https://github.com/joonty/vim-phpqa.git
