--- a/.gitmodules
+++ b/.gitmodules
@@ -65,6 +65,8 @@
 [submodule "bundle/autocomplpop"]
 	path = bundle/autocomplpop
 	url = https://github.com/othree/vim-autocomplpop
+	ignore = untracked
 [submodule "bundle/L9"]
 	path = bundle/L9
 	url = https://github.com/vim-scripts/L9
+	ignore = untracked
