--- a/.gitmodules
+++ b/.gitmodules
@@ -84,3 +84,6 @@
 	path = bundle/fuzzyfinder
 	url = https://github.com/vim-scripts/FuzzyFinder
 	ignore = untracked
+[submodule "bundle/airline"]
+	path = bundle/airline
+	url = https://github.com/vim-airline/vim-airline
